Fixed ValidationRuleBuilder